<resources>
    <string name="app_name" translatable="false">EnergyCalcJava</string>
    <string name="app_bar_name">Energy Calculator</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="three_phase" translatable="false">Three Phase</string>
    <string name="single_phase" translatable="false">Single Phase</string>
    <string name="welcome" translatable="false">Welcome</string>
    <string name="availability" translatable="false">Availability</string>
    <string name="months" translatable="false">Month(s)</string>
    <string name="tariff" translatable="false">Tariff</string>
    <string name="current" translatable="false">Current</string>
    <string name="current1">Current 1</string>
    <string name="current2">Current 2</string>
    <string name="current3">Current 3</string>
    <string name="voltage" translatable="false">Voltage</string>
    <string name="voltage1">Voltage 1</string>
    <string name="voltage2">Voltage 2</string>
    <string name="voltage3">Voltage 3</string>
    <string name="pf">Pf</string>
    <string name="night_mode">Night Mode</string>
    <string name="day_mode">Day Mode</string>
    <string name="power">Power:</string>
    <string name="energy">Energy:</string>
    <string name="amount">Amount:</string>
    <string name="enter_valid_current">Enter Valid Current!</string>
    <string name="enter_valid_voltage">Enter Valid Voltage!</string>
    <string name="enter_valid_hour_avail">Enter Valid Hours(s) of Availability</string>
    <string name="enter_valid_pf">Enter Valid Power Factor</string>
    <string name="enter_valid_month">Enter Valid Number of Month(s)</string>
    <string name="enter_valid_tariff">Enter Valid Tariff!</string>
    <string name="vat_is_seven_point_five_percent">Note: VAT is 7.5% in Nigeria</string>
    <string name="invalid_current1">Enter Valid Current1</string>
    <string name="invalid_current2">Enter Valid Current2</string>
    <string name="invalid_current3">Enter Valid Current3</string>
    <string name="invalid_voltage1">Enter Valid Voltage1</string>
    <string name="invalid_voltage2">Enter Valid voltage2</string>
    <string name="invalid_voltage3">Enter Valid Voltage3</string>
    <string name="diversity_factor_on">Diversity Factor: ON</string>
    <string name="diversity_factor_off">Diversity Factor: OFF</string>
    <string name="diversity_factor_is_sixty_percent">"Diversity Factor is 60%"</string>
</resources>
