<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartPage">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:layout_marginRight="@dimen/eight_dp"
        android:text="@string/welcome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:elevation="@dimen/sixteen_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_margin="@dimen/sixteen_dp"
            android:layout_marginEnd="@dimen/eight_dp"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/single_phase_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_end"
                android:layout_marginRight="@dimen/margin_end"
                android:text="@string/single_phase" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/three_phase_button"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/margin_end"
                android:layout_marginStart="@dimen/margin_end"

                android:layout_height="wrap_content"
                android:text="@string/three_phase" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>